@@ -122,7 +122,14 @@
                                 
                                 <GridSplitter Grid.Column="1" ResizeBehavior="PreviousAndNext" Width="4" />
 
-                                <Controls:AutomationPropertiesControl Grid.Column="2" Element="{Binding CurrentElement.AutomationElement}" HideEmptyEntries="{Binding HideEmptyEntries}" />
+                                <TabControl Grid.Column="2">
+                                    <TabItem Header="Properties" IsSelected="True">
+                                        <Controls:AutomationPropertiesControl Element="{Binding CurrentElement.AutomationElement}" HideEmptyEntries="{Binding HideEmptyEntries}" />
+                                    </TabItem>
+                                    <TabItem Header="BasicElement">
+                                        <Controls:BasicElementSuggestor AutomationElement="{Binding CurrentElement.AutomationElement}" />
+                                    </TabItem>
+                                </TabControl>
                                 
                                 <ProgressBar Grid.ColumnSpan="3"
                                              IsIndeterminate="True"
